fix link buttons being too big on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -14,7 +14,7 @@ body
 }
 a
 {
-  font-size: 50px;
+  font-size: 22px;
 }
 h1
 {
